--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Ovdatham": "node dist/Ovdatham/server/server.mjs"
+    "serve:ssr:ovdatham": "node dist/Ovdatham/server/server.mjs"
   },
   "private": true,
   "dependencies": {
